--- a/pixi.toml
+++ b/pixi.toml
@@ -1,47 +1,45 @@
 [workspace]
+name = "strict-mojo"
+version = "0.1.0"
+description = "A comprehensive Mojo project template with Python packaging standards"
 authors = ["Your Name <your.email@example.com>"]
 channels = ["https://conda.modular.com/max-nightly", "conda-forge"]
-name = "your-project-name"
-platforms = ["osx-arm64"]
-version = "0.1.0"
+platforms = ["osx-arm64", "linux-64"]
 
 [tasks]
+# Core development workflow - delegates to tasks.sh for strict checking
 build = "./tasks.sh build"
 run = "./tasks.sh run"
 test = "./tasks.sh test"
 clean = "./tasks.sh clean"
 
+# Additional convenience tasks
+format = "pixi run mojo format --quiet ."
+format-check = "pixi run mojo format --check ."
+dev-shell = "pixi shell"
+
 [dependencies]
-# Mojo compiler - using 25.4.* for stability while allowing patch updates
+# Mojo runtime - lightweight template keeps only essentials
 modular = "25.4.*"
 
-# Python interpreter for interop - 3.13+ for maximum type safety
-# Python 3.13 includes: TypeIs, ReadOnly, default TypeVars, better error messages
-# Using specific version (not >=) for reproducible strict builds
+# Python for interoperability - latest stable version
 python = "3.13.*"
 
-# pip for installing Python packages
+# Essential development tools
 pip = "*"
 
 [pypi-dependencies]
-# Add your Python dependencies here
-# These will be available for import in Mojo via Python.import_module()
-# Example: numpy = "*"
-# Example: pandas = ">=2.0"
+# Lightweight template - users can add their own dependencies
+# Uncomment examples below as needed:
+# numpy = "*"              # For numerical computing
+# pytest = "*"             # For Python-style testing
 
 [environments]
 default = { solve-group = "default" }
 
 [activation.env]
-# Treat all Python interop warnings as errors (no silent failures)
+# Zero-tolerance strict runtime configuration
 MOJO_PYTHON_INTEROP_WARNINGS = "error"
-
-# Enable runtime assertions for debug_assert() statements
-MOJO_ENABLE_ASSERTIONS = "1"
-
-# Additional strict runtime checks
+MOJO_ENABLE_ASSERTIONS = "1" 
 MOJO_ASSERT_ON_ERROR = "1"
-
-# Keep optimizations enabled to catch more potential issues
-# (Some bugs only appear with optimizations on)
 MOJO_DISABLE_OPTIMIZATIONS = "0"
